--- a/scss/index.scss
+++ b/scss/index.scss
@@ -34,5 +34,6 @@
 @import "components/parallax";
 
 @import "components/services";
+@import "components/gallery";
 
 @import "animations/animations.scss";
