--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -25,7 +25,7 @@ $color-secondary: #ccc;
 $color-secondary-dark: #828282; // 9a9a9a
 $color-secondary-light: #ddd;
 
-$color-tertiary: #fff;
+$color-tertiary: #152136;
 $color-tertiary-light: rgba(255,255,255,0.5);
 $color-tertiary-dark: rgba(255,255,255,0.75);
 
