--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -14,6 +14,7 @@
   border-radius: 30px;
   line-height: 1.2;
   font-weight: bold;
+  cursor: pointer;
 
   &:hover {
     background-color: transparent;
