--- a/scss/components/_stuff.scss
+++ b/scss/components/_stuff.scss
@@ -88,6 +88,32 @@
   height: 200vh;
 }
 
+.bg-gradient-3 {
+  min-height: 140px; padding: 0.9rem 1.6rem;
+  background: linear-gradient(310deg, #b9328a, #233894);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 55s ease infinite;
+  -moz-animation: AnimationName 55s ease infinite;
+  animation: AnimationName 55s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
 
 .icon-heading {
   padding-top: 0.6rem;
