home done; services done; contact -> map missing

--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -76,6 +76,12 @@ p, li, ul, span {
     color:  #fff;
   }
 }
+@include respond-to($large) {
+  .white-lg {
+    color: #fff;
+  }
+};
+
 .accent {
   color: $color-accent;
 }
