--- a/scss/layout/_flexbox.scss
+++ b/scss/layout/_flexbox.scss
@@ -115,3 +115,8 @@
     @include prefix(justify-content, space-between);
   }
 }
+.justify-space-between-lg {
+  @include respond-to($large) {
+    @include prefix(justify-content, space-between);
+  }
+}
