--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -36,7 +36,7 @@ $ca-blue: #2f388e;
 $ca-magenta: #b9328a;
 $ca-green: #abd8c8;
 
-$gradient1: linear-gradient(#9198e5, #570065);;
+$gradient1: linear-gradient(90deg,#2f388e, #b9328a);;
 
 $color-accent: $ca-yellow;
 
