--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -49,11 +49,16 @@ form {
     background-color: transparent;
     font-size: $font-size;
     width: 100%;
-    padding: 8px 12px 6px 0;
-    border-bottom: 1px solid $color-secondary-dark;
+    padding: 8px 12px 10px 0;
+    border-bottom: 3px solid $gradient1;
     color: $font-color-primary;
     border-radius: 2px;
     transition: 0.3s ease;
+
+    background-image: $gradient1;
+    background-position: center bottom;
+    background-size: 200% 2px;
+    background-repeat: no-repeat;
 
     &:focus {
       border-color: $color-primary-dark;
@@ -77,7 +82,7 @@ form {
     &.focused {
       label {
         transform: translateY(-24px) scale(0.8);
-        color: $color-primary-dark;
+        color: $ca-blue;
       }
       input:not(.error), textarea:not(.error) {
         border-color: transparent;
