--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -12,6 +12,10 @@
     text-transform: uppercase;
     color: #fff;
 
+    h5 {
+      color: #fff;
+    }
+
     h5:before {
       content: "";
       position: absolute;
@@ -28,7 +32,8 @@
       overflow: hidden;
 
       a {
-        color: #fff;        
+        color: #fff;
+        display: block;
       }
       svg {
         transform: translateY(-120%);
@@ -41,11 +46,16 @@
         &:last-child {
           transition-delay: 0.1s;
         }
+
+        &:hover {
+          transform: scale(1.1) translateY(-120%);
+        }
       }
     }
   }
 
   &__item {
+    display: block;
     padding: 0.8rem;
 
     .img {
@@ -118,6 +128,13 @@
           opacity: 0.9;
         }
       }
+    }
+  }
+
+  &__filters {
+    padding: 1.6rem 12px;
+    .btn-border {
+      margin: 6px;
     }
   }
 }
