--- a/scss/components/_hero-stuff.scss
+++ b/scss/components/_hero-stuff.scss
@@ -21,7 +21,7 @@
       }
     }
     img, svg {
-      max-height: 500px;
+      max-height: 600px;
     }
     svg{
       width: 100%;
@@ -36,14 +36,12 @@
   @include respond-to($extra-large) {
     max-height: 56.25vw;
   }
-  @include respond-to($medium) {
-
-    &__content {
-      padding: 100px calc(10px + 2vw) calc(30px + 3vw) calc(40px + 4vw);
-    }
-  };
 }
 
+.p-big-sides {
+  padding-left: calc(20px + 2vw);
+  padding-right: calc(20px + 2vw);
+}
 @include respond-to($medium-small) {
   .p-big-left {
     padding-left: calc(40px + 4vw);
