--- a/scss/components/_stuff.scss
+++ b/scss/components/_stuff.scss
@@ -129,7 +129,8 @@
 }
 
 .bg-gradient-3 {
-  min-height: 140px; padding: 0.9rem 1.6rem;
+  height: 140px; 
+  padding: 0.9rem 1.6rem;
   background: linear-gradient(310deg, #b9328a, #233894);
   background-size: 400% 400%;
 
