--- a/scss/index.scss
+++ b/scss/index.scss
@@ -35,5 +35,7 @@
 
 @import "components/services";
 @import "components/gallery";
+@import "components/team";
+
 
 @import "animations/animations.scss";
