--- a/scss/singleStyles/_shadows.scss
+++ b/scss/singleStyles/_shadows.scss
@@ -12,6 +12,10 @@
     box-shadow: 0px -2px 8px 0px rgba(0,0,0,0.3)
   }
 
+  &-small {
+    box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.3);
+  }
+
   &-text {
     text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
   }
