--- a/scss/components/header/_nav.scss
+++ b/scss/components/header/_nav.scss
@@ -57,18 +57,19 @@ nav {
         margin: 12px 12px 0;
 
         span {
+          display: inline-block;
           overflow: hidden;
         }
         span:before {
-          transition: 0.4s linear;
           content: "";
+          transition: 0.4s linear;
           position: absolute;
           width: 100%;
           height: 100%;
           top: 0;
           left: 0;
           background-color:  rgba(252, 195, 71, 0.6);
-          transform: translateX(calc(-100% - 2px));
+          transform: translateX(-101%);
           transform-origin: left center;
         }
 
@@ -76,7 +77,7 @@ nav {
           transition: 0.3s ease 0.25s;
           color: $ca-yellow;
           span:before {
-            transform: translateX(calc(100% + 2px));
+            transform: translateX(101%);
           }
         }
       }
