--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -9,6 +9,7 @@
     transform: scale(0);
     position: absolute;
     top: 0.9rem;
+    left: 0.9rem;
     width: calc(100% - 1.8rem);
     height: calc(100% - 1.8rem);
     padding: 0.9rem;
