--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -37,6 +37,7 @@ $ca-magenta: #b9328a;
 $ca-green: #abd8c8;
 
 $gradient1: linear-gradient(90deg,#2f388e, #b9328a);;
+$gradient2: linear-gradient(35deg, #2f388e, #b9328a);;
 
 $color-accent: $ca-yellow;
 
