--- a/scss/components/_hero-stuff.scss
+++ b/scss/components/_hero-stuff.scss
@@ -52,6 +52,10 @@
   padding-left: calc(20px + 2vw);
   padding-right: calc(20px + 2vw);
 }
+.p-big  {
+  padding-left: calc(20px + 2vw);
+  padding-right: calc(20px + 2vw);
+}
 @include respond-to($medium-small) {
   .p-big-left {
     padding-left: calc(40px + 4vw);
@@ -61,6 +65,6 @@
     padding-right: calc(40px + 4vw);
   }
   .p-big {
-    padding: 100px calc(10px + 2vw) calc(30px + 3vw) calc(40px + 4vw);
+    padding: 130px calc(10px + 2vw) calc(30px + 3vw) calc(40px + 4vw);
   }
 };
