--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -2,7 +2,7 @@
 
 $headerHeight: 90px;
 $aboveHHeight: 50px;
-$nav: '(min-width: 1108px)';
+$nav: $large;
 
 .above-header {
   height: $aboveHHeight;
@@ -10,6 +10,7 @@ $nav: '(min-width: 1108px)';
   width: 100%;
   padding: 0 calc(32px + 1vw) 0 calc(32px + 1vw);
   transition: 0.3s ease;
+  display: none;
 
   &.white a {
     color: $ca-green;
@@ -30,6 +31,9 @@ $nav: '(min-width: 1108px)';
       color: $ca-yellow;
     }
   }
+  @include respond-to($medium-large) {
+    display: block;
+  };
 }
 
 
@@ -54,7 +58,7 @@ header {
     transition: 0.45s ease-in 0.05s;
     opacity: 0;
     height: 100%;
-    max-width: 65px;
+    max-width: 60px;
     z-index: 1;
     margin-top: 2px;
 
@@ -68,36 +72,51 @@ header {
   }
 
   &.fixed {
-    transform: translateY(-74px)!important;
-    box-shadow: 2px 2px 8px 0 rgba(0,0,0,.3);
+    @include respond-to($medium-large) {
+      transform: translateY(-74px)!important;
+      box-shadow: 2px 2px 8px 0 rgba(0,0,0,.3);
 
-    transform: translateY(-50px)!important;
+      transform: translateY(-50px)!important;
+      background-color: #fff;
+
+      .logo-container .logo {
+        transform: scale(1) translateY(-50%);
+      }
+    };
+  }
+  @include respond-to('(max-width: 992px)') {
     background-color: #fff;
-
-    .logo-container .logo {
-      transform: scale(1) translateY(-50%);
+    box-shadow: 0 2px 12px rgba(0,0,0,0.4);
+    .logo-container {
+      max-width: 55px;
+      .logo {
+        transform: scale(1) translateY(-50%);
+      }
     }
+    .nav__content {
+      padding-top: 130px;
+    }
+  };
+
+
+  .extra-link {
+    padding: 0.9rem calc(32px + 1vw);
+    @include respond-to($medium-large) {
+      max-width: 360px;
+      min-width: 300px;
+      flex-grow: 1;
+    };
   }
 
   &.open {
-    transform: translateY(0)!important;
     transition: 0.5s ease;
-    color: #fff;
-
-    .nav__content {
-      padding-top: 130px;
-
-      &:before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 130px;
-        background-color: $color-primary;
-        z-index: 1000;
-        box-shadow: 0 2px 12px rgba(0,0,0,0.7);
-      }
+    &:before {
+      position: absolute;
+      z-index: 5;
+      top: 0;
+      left: 0;
+      background-color: #fff;
+      height: 130px;
     }
   }
 }
